change text for Hourly pm25 predicted

--- a/Air4God.ipynb
+++ b/Air4God.ipynb
@@ -1395,7 +1395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1419,7 +1419,7 @@
               "        "
             ],
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x25b281bb250>"
+              "<IPython.lib.display.IFrame at 0x25aec4e8040>"
             ]
           },
           "metadata": {},
@@ -1538,7 +1538,6 @@
         "                ),\n",
         "                html.Div(\n",
         "                    children=[\n",
-        "                        html.H1(\"PM2.5 Predictions for the Next 7 Days (Hourly)\"),\n",
         "                        dcc.Graph(\n",
         "                            id=\"pm25-predictions\",\n",
         "                            figure={\n",
@@ -1609,9 +1608,6 @@
         "        & (train[\"DATETIMEDATA\"] <= end_date)\n",
         "    )\n",
         "    filtered_data = train.loc[mask, :]\n",
-        "    \n",
-        "    # Your existing code to filter data and create predictions DataFrame\n",
-        "    # ...\n",
         "\n",
         "    # Assuming 'prediction_label' is the column containing PM2.5 predictions in your DataFrame\n",
         "    pm25_predictions = train[\"prediction_label\"].tolist()\n",
@@ -1639,7 +1635,7 @@
         "            }\n",
         "        ],\n",
         "        \"layout\": {\n",
-        "            \"title\": f\"Hourly PM2.5 Predictions for the Next {selected_days} Days\",\n",
+        "            \"title\": {\"text\" :f\"Hourly PM2.5 Predictions for the Next {selected_days} Days\", \"x\": 0.05, \"xanchor\": \"left\"},\n",
         "            \"xaxis\": {\"title\": \"Timestamp\"},\n",
         "            \"yaxis\": {\"title\": \"PM2.5 Predicted\"},\n",
         "            \"colorway\": [\"#155d21\"],\n",
