--- a/Air4God.ipynb
+++ b/Air4God.ipynb
@@ -1271,7 +1271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 73,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1295,7 +1295,7 @@
               "        "
             ],
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x2df40944af0>"
+              "<IPython.lib.display.IFrame at 0x2df404f8a90>"
             ]
           },
           "metadata": {},
@@ -1406,10 +1406,20 @@
         "                html.Div(\n",
         "                    children=[\n",
         "                        dcc.Graph(\n",
-        "                            id=\"parameter-chart\", config={\"displayModeBar\": False},\n",
+        "                            id=\"parameter-chart\", \n",
+        "                            config={\"displayModeBar\": False},\n",
         "                        ),\n",
         "                    ],\n",
         "                    className=\"card\",\n",
+        "                ),\n",
+        "                html.Div(\n",
+        "                    children=[\n",
+        "                        dcc.Graph(\n",
+        "                            id=\"parameter-pie-chart\",\n",
+        "                            config={\"displayModeBar\": False},\n",
+        "                        ),\n",
+        "                    ],\n",
+        "                className=\"card\",\n",
         "                ),\n",
         "                html.Div(\n",
         "                    children=[\n",
@@ -1466,6 +1476,77 @@
         "        },\n",
         "    }\n",
         "    return chart_figure\n",
+        "\n",
+        "\n",
+        "# Add a new dcc.Graph component for the Pie Chart\n",
+        "html.Div(\n",
+        "    children=[\n",
+        "        dcc.Graph(\n",
+        "            id=\"parameter-pie-chart\",\n",
+        "            config={\"displayModeBar\": False},\n",
+        "        ),\n",
+        "    ],\n",
+        "    className=\"card\",\n",
+        "),\n",
+        "\n",
+        "# Modify the callback to update the Pie Chart\n",
+        "@app.callback(\n",
+        "    Output(\"parameter-pie-chart\", \"figure\"),\n",
+        "    [\n",
+        "        Input(\"parameter-filter\", \"value\"),\n",
+        "        Input(\"date-range\", \"start_date\"),\n",
+        "        Input(\"date-range\", \"end_date\"),\n",
+        "    ],\n",
+        ")\n",
+        "\n",
+        "def update_pie_chart(parameter, start_date, end_date):\n",
+        "    mask = (\n",
+        "        (train[\"DATETIMEDATA\"] >= start_date)\n",
+        "        & (train[\"DATETIMEDATA\"] <= end_date)\n",
+        "    )\n",
+        "    filtered_data = train.loc[mask, :]\n",
+        "\n",
+        "    # Exclude the \"prediction_label\" column from parameters\n",
+        "    parameters_to_exclude = [\"prediction_label\"]\n",
+        "    available_parameters = [param for param in train.columns[2:] if param not in parameters_to_exclude]\n",
+        "\n",
+        "    # Check if the selected parameter is valid\n",
+        "    if parameter not in available_parameters:\n",
+        "        parameter = available_parameters[0]\n",
+        "\n",
+        "    pm25_mean_value = filtered_data[\"PM25\"].mean()\n",
+        "    prediction_label_mean_value = filtered_data[\"prediction_label\"].mean()\n",
+        "\n",
+        "    # Calculate accuracy\n",
+        "    accuracy = (1 - abs(pm25_mean_value - prediction_label_mean_value) / pm25_mean_value) * 100\n",
+        "\n",
+        "    # Create the Pie Chart\n",
+        "    pie_chart_figure = {\n",
+        "        \"data\": [\n",
+        "            {\n",
+        "                \"labels\": [\n",
+        "                    f\"Mean Value (PM25)\",\n",
+        "                    f\"Mean Value (Prediction Label)\\nAccuracy: {accuracy:.2f}%\"\n",
+        "                ],\n",
+        "                \"values\": [pm25_mean_value, prediction_label_mean_value],\n",
+        "                \"type\": \"pie\",\n",
+        "                \"marker\": {\"colors\": [\"#155d21\", \"#9a070e\"]},\n",
+        "                \"hole\": 0.4,\n",
+        "            },\n",
+        "        ],\n",
+        "        \"layout\": {\n",
+        "            \"title\": {\"text\": f\"Mean Values Distribution for {parameter}\", \"x\": 0.05, \"xanchor\": \"left\"},\n",
+        "            \"colorway\": [\"#155d21\", \"#9a070e\"],\n",
+        "        },\n",
+        "    }\n",
+        "\n",
+        "    return pie_chart_figure\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "# Define the third callback to update the PM2.5 predictions chart\n",
         "@app.callback(\n",
