--- a/Air4God_RH.ipynb
+++ b/Air4God_RH.ipynb
@@ -19,175 +19,14 @@
         "id": "bRRT2nIj1o_H",
         "outputId": "66d8ee7a-7939-4405-cc42-ec8f351ef850"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Defaulting to user installation because normal site-packages is not writeable\n",
-            "Collecting pandas\n",
-            "  Using cached pandas-2.2.1-cp312-cp312-win_amd64.whl.metadata (19 kB)\n",
-            "Collecting pycaret\n",
-            "  Using cached pycaret-3.3.0-py3-none-any.whl.metadata (17 kB)\n",
-            "Collecting numpy<2,>=1.26.0 (from pandas)\n",
-            "  Using cached numpy-1.26.4-cp312-cp312-win_amd64.whl.metadata (61 kB)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas) (2.9.0.post0)\n",
-            "Collecting pytz>=2020.1 (from pandas)\n",
-            "  Using cached pytz-2024.1-py2.py3-none-any.whl.metadata (22 kB)\n",
-            "Collecting tzdata>=2022.7 (from pandas)\n",
-            "  Using cached tzdata-2024.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-            "Requirement already satisfied: ipython>=5.5.0 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pycaret) (8.22.2)\n",
-            "Collecting ipywidgets>=7.6.5 (from pycaret)\n",
-            "  Using cached ipywidgets-8.1.2-py3-none-any.whl.metadata (2.4 kB)\n",
-            "Collecting tqdm>=4.62.0 (from pycaret)\n",
-            "  Using cached tqdm-4.66.2-py3-none-any.whl.metadata (57 kB)\n",
-            "Collecting pandas\n",
-            "  Using cached pandas-2.1.4-cp312-cp312-win_amd64.whl.metadata (18 kB)\n",
-            "Requirement already satisfied: jinja2>=3 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pycaret) (3.1.3)\n",
-            "Collecting scipy<=1.11.4,>=1.6.1 (from pycaret)\n",
-            "  Using cached scipy-1.11.4-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
-            "Collecting joblib>=1.2.0 (from pycaret)\n",
-            "  Using cached joblib-1.3.2-py3-none-any.whl.metadata (5.4 kB)\n",
-            "Collecting scikit-learn>1.4.0 (from pycaret)\n",
-            "  Using cached scikit_learn-1.4.1.post1-cp312-cp312-win_amd64.whl.metadata (11 kB)\n",
-            "Collecting pyod>=1.1.3 (from pycaret)\n",
-            "  Using cached pyod-1.1.3.tar.gz (160 kB)\n",
-            "  Installing build dependencies: started\n",
-            "  Installing build dependencies: finished with status 'done'\n",
-            "  Getting requirements to build wheel: started\n",
-            "  Getting requirements to build wheel: finished with status 'done'\n",
-            "  Installing backend dependencies: started\n",
-            "  Installing backend dependencies: finished with status 'done'\n",
-            "  Preparing metadata (pyproject.toml): started\n",
-            "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
-            "Collecting imbalanced-learn>=0.12.0 (from pycaret)\n",
-            "  Using cached imbalanced_learn-0.12.0-py3-none-any.whl.metadata (8.2 kB)\n",
-            "Collecting category-encoders>=2.4.0 (from pycaret)\n",
-            "  Using cached category_encoders-2.6.3-py2.py3-none-any.whl.metadata (8.0 kB)\n",
-            "Collecting lightgbm>=3.0.0 (from pycaret)\n",
-            "  Using cached lightgbm-4.3.0-py3-none-win_amd64.whl.metadata (19 kB)\n",
-            "Collecting numba>=0.55.0 (from pycaret)\n",
-            "  Using cached numba-0.59.0-cp312-cp312-win_amd64.whl.metadata (2.8 kB)\n",
-            "Requirement already satisfied: requests>=2.27.1 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pycaret) (2.31.0)\n",
-            "Requirement already satisfied: psutil>=5.9.0 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pycaret) (5.9.8)\n",
-            "Requirement already satisfied: markupsafe>=2.0.1 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pycaret) (2.1.5)\n",
-            "Requirement already satisfied: importlib-metadata>=4.12.0 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pycaret) (7.0.2)\n",
-            "Collecting nbformat>=4.2.0 (from pycaret)\n",
-            "  Using cached nbformat-5.10.2-py3-none-any.whl.metadata (3.6 kB)\n",
-            "Collecting cloudpickle (from pycaret)\n",
-            "  Using cached cloudpickle-3.0.0-py3-none-any.whl.metadata (7.0 kB)\n",
-            "Collecting deprecation>=2.1.0 (from pycaret)\n",
-            "  Using cached deprecation-2.1.0-py2.py3-none-any.whl.metadata (4.6 kB)\n",
-            "Collecting xxhash (from pycaret)\n",
-            "  Using cached xxhash-3.4.1-cp312-cp312-win_amd64.whl.metadata (12 kB)\n",
-            "Collecting matplotlib<3.8.0 (from pycaret)\n",
-            "  Using cached matplotlib-3.7.5-cp312-cp312-win_amd64.whl.metadata (5.8 kB)\n",
-            "Collecting scikit-plot>=0.3.7 (from pycaret)\n",
-            "  Using cached scikit_plot-0.3.7-py3-none-any.whl.metadata (7.1 kB)\n",
-            "Collecting yellowbrick>=1.4 (from pycaret)\n",
-            "  Using cached yellowbrick-1.5-py3-none-any.whl.metadata (7.7 kB)\n",
-            "Requirement already satisfied: plotly>=5.14.0 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pycaret) (5.19.0)\n",
-            "Collecting kaleido>=0.2.1 (from pycaret)\n",
-            "  Using cached kaleido-0.2.1-py2.py3-none-win_amd64.whl.metadata (15 kB)\n",
-            "Collecting schemdraw==0.15 (from pycaret)\n",
-            "  Using cached schemdraw-0.15-py3-none-any.whl.metadata (2.2 kB)\n",
-            "Collecting plotly-resampler>=0.8.3.1 (from pycaret)\n",
-            "  Using cached plotly_resampler-0.9.2-py3-none-any.whl.metadata (13 kB)\n",
-            "Collecting statsmodels>=0.12.1 (from pycaret)\n",
-            "  Using cached statsmodels-0.14.1-cp312-cp312-win_amd64.whl.metadata (9.8 kB)\n",
-            "Collecting sktime>=0.26.0 (from pycaret)\n",
-            "  Using cached sktime-0.27.0-py3-none-any.whl.metadata (29 kB)\n",
-            "Collecting tbats>=1.1.3 (from pycaret)\n",
-            "  Using cached tbats-1.1.3-py3-none-any.whl.metadata (3.8 kB)\n",
-            "Collecting pmdarima>=2.0.4 (from pycaret)\n",
-            "  Using cached pmdarima-2.0.4-cp312-cp312-win_amd64.whl.metadata (8.0 kB)\n",
-            "Collecting patsy>=0.5.1 (from category-encoders>=2.4.0->pycaret)\n",
-            "  Using cached patsy-0.5.6-py2.py3-none-any.whl.metadata (3.5 kB)\n",
-            "Requirement already satisfied: packaging in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from deprecation>=2.1.0->pycaret) (24.0)\n",
-            "Collecting threadpoolctl>=2.0.0 (from imbalanced-learn>=0.12.0->pycaret)\n",
-            "  Using cached threadpoolctl-3.3.0-py3-none-any.whl.metadata (13 kB)\n",
-            "Requirement already satisfied: zipp>=0.5 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from importlib-metadata>=4.12.0->pycaret) (3.17.0)\n",
-            "Requirement already satisfied: decorator in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from ipython>=5.5.0->pycaret) (5.1.1)\n",
-            "Requirement already satisfied: jedi>=0.16 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from ipython>=5.5.0->pycaret) (0.19.1)\n",
-            "Requirement already satisfied: matplotlib-inline in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from ipython>=5.5.0->pycaret) (0.1.6)\n",
-            "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from ipython>=5.5.0->pycaret) (3.0.43)\n",
-            "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from ipython>=5.5.0->pycaret) (2.17.2)\n",
-            "Requirement already satisfied: stack-data in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from ipython>=5.5.0->pycaret) (0.6.3)\n",
-            "Requirement already satisfied: traitlets>=5.13.0 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from ipython>=5.5.0->pycaret) (5.14.1)\n",
-            "Requirement already satisfied: colorama in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from ipython>=5.5.0->pycaret) (0.4.6)\n",
-            "Requirement already satisfied: comm>=0.1.3 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from ipywidgets>=7.6.5->pycaret) (0.2.1)\n",
-            "Collecting widgetsnbextension~=4.0.10 (from ipywidgets>=7.6.5->pycaret)\n",
-            "  Using cached widgetsnbextension-4.0.10-py3-none-any.whl.metadata (1.6 kB)\n",
-            "Collecting jupyterlab-widgets~=3.0.10 (from ipywidgets>=7.6.5->pycaret)\n",
-            "  Using cached jupyterlab_widgets-3.0.10-py3-none-any.whl.metadata (4.1 kB)\n",
-            "Collecting contourpy>=1.0.1 (from matplotlib<3.8.0->pycaret)\n",
-            "  Using cached contourpy-1.2.0-cp312-cp312-win_amd64.whl.metadata (5.8 kB)\n",
-            "Collecting cycler>=0.10 (from matplotlib<3.8.0->pycaret)\n",
-            "  Using cached cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
-            "Collecting fonttools>=4.22.0 (from matplotlib<3.8.0->pycaret)\n",
-            "  Using cached fonttools-4.49.0-cp312-cp312-win_amd64.whl.metadata (162 kB)\n",
-            "Collecting kiwisolver>=1.0.1 (from matplotlib<3.8.0->pycaret)\n",
-            "  Using cached kiwisolver-1.4.5-cp312-cp312-win_amd64.whl.metadata (6.5 kB)\n",
-            "Collecting pillow>=6.2.0 (from matplotlib<3.8.0->pycaret)\n",
-            "  Using cached pillow-10.2.0-cp312-cp312-win_amd64.whl.metadata (9.9 kB)\n",
-            "Collecting pyparsing>=2.3.1 (from matplotlib<3.8.0->pycaret)\n",
-            "  Using cached pyparsing-3.1.2-py3-none-any.whl.metadata (5.1 kB)\n",
-            "Collecting fastjsonschema (from nbformat>=4.2.0->pycaret)\n",
-            "  Using cached fastjsonschema-2.19.1-py3-none-any.whl.metadata (2.1 kB)\n",
-            "Collecting jsonschema>=2.6 (from nbformat>=4.2.0->pycaret)\n",
-            "  Using cached jsonschema-4.21.1-py3-none-any.whl.metadata (7.8 kB)\n",
-            "Requirement already satisfied: jupyter-core in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from nbformat>=4.2.0->pycaret) (5.7.1)\n",
-            "Collecting llvmlite<0.43,>=0.42.0dev0 (from numba>=0.55.0->pycaret)\n",
-            "  Using cached llvmlite-0.42.0-cp312-cp312-win_amd64.whl.metadata (4.9 kB)\n",
-            "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from plotly>=5.14.0->pycaret) (8.2.3)\n",
-            "Requirement already satisfied: dash>=2.9.0 in c:\\users\\wator\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from plotly-resampler>=0.8.3.1->pycaret) (2.16.1)\n",
-            "Collecting orjson<4.0.0,>=3.8.0 (from plotly-resampler>=0.8.3.1->pycaret)\n",
-            "  Using cached orjson-3.9.15-cp312-none-win_amd64.whl.metadata (50 kB)\n",
-            "Collecting tsdownsample==0.1.2 (from plotly-resampler>=0.8.3.1->pycaret)\n",
-            "  Using cached tsdownsample-0.1.2.tar.gz (40 kB)\n",
-            "  Installing build dependencies: started\n",
-            "  Installing build dependencies: finished with status 'done'\n",
-            "  Getting requirements to build wheel: started\n",
-            "  Getting requirements to build wheel: finished with status 'done'\n",
-            "  Preparing metadata (pyproject.toml): started\n",
-            "  Preparing metadata (pyproject.toml): finished with status 'error'\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "  error: subprocess-exited-with-error\n",
-            "  \n",
-            "  × Preparing metadata (pyproject.toml) did not run successfully.\n",
-            "  │ exit code: 1\n",
-            "  ╰─> [6 lines of output]\n",
-            "      Checking for Rust toolchain....\n",
-            "      \n",
-            "      Cargo, the Rust package manager, is not installed or is not on PATH.\n",
-            "      This package requires Rust and Cargo to compile extensions. Install it through\n",
-            "      the system's package manager or via https://rustup.rs/\n",
-            "      \n",
-            "      [end of output]\n",
-            "  \n",
-            "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
-            "error: metadata-generation-failed\n",
-            "\n",
-            "× Encountered error while generating package metadata.\n",
-            "╰─> See above for output.\n",
-            "\n",
-            "note: This is an issue with the package mentioned above, not pip.\n",
-            "hint: See above for details.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install pandas pycaret\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -243,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -305,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -464,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -823,7 +662,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1001,7 +840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1213,7 +1052,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1276,7 +1115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1347,7 +1186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1379,7 +1218,6 @@
         }
       ],
       "source": [
-        "\n",
         "\n",
         "import webbrowser\n",
         "import datetime\n",
@@ -1421,7 +1259,7 @@
         "            children=[\n",
         "                html.P(children=\"🍃😎🍃\", className=\"header-emoji\"),\n",
         "                html.H1(\n",
-        "                    children=\"Air Quality Analytics\", className=\"header-title\"\n",
+        "                    children=\"Relative Humidity Analytics\", className=\"header-title\"\n",
         "                ),\n",
         "                html.P(\n",
         "                    children=\"Analyze air quality parameters\"\n",
@@ -1673,10 +1511,10 @@
         "\n",
         "# Run the app\n",
         "if __name__ == \"__main__\":\n",
-        "    app.run_server(debug=True, mode='inline')\n",
+        "    app.run_server(debug=True, mode='inline', port=8051)\n",
         "\n",
         "    # Open the app in a new browser window\n",
-        "    webbrowser.open_new_tab(\"http://127.0.0.1:8050/\")\n"
+        "    webbrowser.open_new_tab(\"http://127.0.0.1:8051/\")"
       ]
     }
   ],
