edit rh web to show correct data

--- a/Air4God_RH.ipynb
+++ b/Air4God_RH.ipynb
@@ -1087,7 +1087,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1103,7 +1103,7 @@
               "        <iframe\n",
               "            width=\"100%\"\n",
               "            height=\"650\"\n",
-              "            src=\"http://127.0.0.1:8051/\"\n",
+              "            src=\"http://127.0.0.1:8050/\"\n",
               "            frameborder=\"0\"\n",
               "            allowfullscreen\n",
               "            \n",
@@ -1111,7 +1111,7 @@
               "        "
             ],
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x238cb4d1390>"
+              "<IPython.lib.display.IFrame at 0x238cb048350>"
             ]
           },
           "metadata": {},
@@ -1119,15 +1119,16 @@
         }
       ],
       "source": [
-        "\n",
         "import webbrowser\n",
         "import datetime\n",
         "import pandas as pd\n",
         "from jupyter_dash import JupyterDash\n",
         "from dash import Dash, dcc, html\n",
         "from dash.dependencies import Output, Input\n",
+        "import dash_table\n",
+        "from dash_table.Format import Format, Scheme\n",
         "\n",
-        "# Assuming 'train' is your DataFrame, modify this accordingly\n",
+        "# Assuming 'predict_new' is your DataFrame, modify this accordingly\n",
         "train = predict_new\n",
         "\n",
         "# Load your dataset containing PM25, PM10, O3, CO, NO2, SO2, WS, TEMP, RH, WD\n",
@@ -1139,7 +1140,7 @@
         "train.sort_values(\"DATETIMEDATA\", inplace=True)\n",
         "\n",
         "# Assuming 'prediction_label' is the column containing PM2.5 predictions in your DataFrame\n",
-        "pm25_predictions = train[\"prediction_label\"].tolist()\n",
+        "rh_predictions = train[\"prediction_label\"].tolist()\n",
         "\n",
         "# Create a DataFrame with hourly timestamps for the next 7 days\n",
         "hours_in_a_day = 24\n",
@@ -1149,7 +1150,9 @@
         "# Create Dash app\n",
         "external_stylesheets = [\n",
         "    {\"href\": \"https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap\", \"rel\": \"stylesheet\"},\n",
+        "    {\"href\": \"https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css\", \"rel\": \"stylesheet\", \"integrity\": \"sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T\", \"crossorigin\": \"anonymous\"},\n",
         "]\n",
+        "\n",
         "app = Dash(__name__, external_stylesheets=external_stylesheets)\n",
         "app.title = \"Air Quality Analytics: Understand Your Air\"\n",
         "\n",
@@ -1160,7 +1163,7 @@
         "            children=[\n",
         "                html.P(children=\"🍃😎🍃\", className=\"header-emoji\"),\n",
         "                html.H1(\n",
-        "                    children=\"Relative Humidity Analytics\", className=\"header-title\"\n",
+        "                    children=\"Air Quality Analytics\", className=\"header-title\"\n",
         "                ),\n",
         "                html.P(\n",
         "                    children=\"Analyze air quality parameters\"\n",
@@ -1208,7 +1211,7 @@
         "                            max=7,\n",
         "                            step=1,\n",
         "                            value=1,\n",
-        "                            marks={i: f\"{i} {'' if i > 1 else ''}\" for i in range(1, 8)},\n",
+        "                            marks={i: {\"label\": f\"{i} {'' if i > 1 else ''}\", \"style\": {\"font-size\": \"16px\"}} for i in range(1, 8)},\n",
         "                            className=\"slider\",\n",
         "                        ),\n",
         "                    ]\n",
@@ -1229,25 +1232,51 @@
         "                ),\n",
         "                html.Div(\n",
         "                    children=[\n",
+        "                        dash_table.DataTable(\n",
+        "                            id='summary-table',\n",
+        "                            columns=[\n",
+        "                                {\"name\": \"Parameter\", \"id\": \"Parameter\"},\n",
+        "                                {\"name\": \"Min\", \"id\": \"Min\", \"type\": \"numeric\", \"format\": Format(precision=2, scheme=Scheme.fixed)},\n",
+        "                                {\"name\": \"Max\", \"id\": \"Max\", \"type\": \"numeric\", \"format\": Format(precision=2, scheme=Scheme.fixed)},\n",
+        "                                {\"name\": \"Mean\", \"id\": \"Mean\", \"type\": \"numeric\", \"format\": Format(precision=2, scheme=Scheme.fixed)},\n",
+        "                            ],\n",
+        "                            style_table={'overflowX': 'auto'},\n",
+        "                            style_cell={'textAlign': 'left'},\n",
+        "                            style_header={\n",
+        "                                'backgroundColor': 'rgb(230, 230, 230)',\n",
+        "                                'fontWeight': 'bold'\n",
+        "                            },\n",
+        "                            style_data_conditional=[\n",
+        "                                {\n",
+        "                                    'if': {'row_index': 'odd'},\n",
+        "                                    'backgroundColor': 'rgb(248, 248, 248)'\n",
+        "                                }\n",
+        "                            ]\n",
+        "                        )\n",
+        "                    ],\n",
+        "                    className=\"summary-table\",\n",
+        "                ),\n",
+        "                html.Div(\n",
+        "                    children=[\n",
         "                        dcc.Graph(\n",
         "                            id=\"parameter-pie-chart\",\n",
         "                            config={\"displayModeBar\": False},\n",
         "                        ),\n",
         "                    ],\n",
-        "                className=\"card\",\n",
+        "                    className=\"card\",\n",
         "                ),\n",
         "                html.Div(\n",
         "                    children=[\n",
         "                        dcc.Graph(\n",
-        "                            id=\"Relative Humidity-predictions\",\n",
+        "                            id=\"rh-predictions\",\n",
         "                            figure={\n",
         "                                \"data\": [\n",
-        "                                    {\"x\": [], \"y\": [], \"type\": \"line\", \"name\": \"Relative Humidity Predictions\"}\n",
+        "                                    {\"x\": [], \"y\": [], \"type\": \"line\", \"name\": \"PM 2.5 Predictions\"}\n",
         "                                ],\n",
         "                                \"layout\": {\n",
-        "                                    \"title\": \"Hourly PM 2.5 Predictions\",\n",
+        "                                    \"title\": \"Hourly Relative Humidity Predictions\",\n",
         "                                    \"xaxis\": {\"title\": \"Timestamp\"},\n",
-        "                                    \"yaxis\": {\"title\": \"PM 2.5 Predicted\"},\n",
+        "                                    \"yaxis\": {\"title\": \"Relative Humidity Predicted\"},\n",
         "                                },\n",
         "                            },\n",
         "                        ),\n",
@@ -1260,7 +1289,20 @@
         "    ]\n",
         ")\n",
         "\n",
-        "# Define the first callback to update the parameter chart\n",
+        "\n",
+        "# Add Bootstrap JS and Popper.js scripts\n",
+        "app.scripts.append_script({\n",
+        "    'external_url': 'https://code.jquery.com/jquery-3.2.1.slim.min.js'\n",
+        "})\n",
+        "\n",
+        "app.scripts.append_script({\n",
+        "    'external_url': 'https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js'\n",
+        "})\n",
+        "\n",
+        "app.scripts.append_script({\n",
+        "    'external_url': 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js'\n",
+        "})\n",
+        "# Modify the update_chart callback to include training and testing data\n",
         "@app.callback(\n",
         "    Output(\"parameter-chart\", \"figure\"),\n",
         "    [\n",
@@ -1275,34 +1317,61 @@
         "        & (train[\"DATETIMEDATA\"] <= end_date)\n",
         "    )\n",
         "    filtered_data = train.loc[mask, :]\n",
+        "\n",
+        "    # Split the data into training and testing sets\n",
+        "    train_size = int(len(filtered_data) * 0.8)\n",
+        "    train_data = filtered_data[:train_size]\n",
+        "    test_data = filtered_data[train_size:]\n",
+        "\n",
         "    chart_figure = {\n",
         "        \"data\": [\n",
         "            {\n",
-        "                \"x\": filtered_data[\"DATETIMEDATA\"],\n",
-        "                \"y\": filtered_data[parameter],\n",
+        "                \"x\": train_data[\"DATETIMEDATA\"],\n",
+        "                \"y\": train_data[parameter],\n",
         "                \"type\": \"lines\",\n",
+        "                \"name\": \"Training Data\",\n",
+        "            },\n",
+        "            {\n",
+        "                \"x\": test_data[\"DATETIMEDATA\"],\n",
+        "                \"y\": test_data[parameter],\n",
+        "                \"type\": \"lines\",\n",
+        "                \"name\": \"Testing Data\",\n",
         "            },\n",
         "        ],\n",
         "        \"layout\": {\n",
-        "            \"title\": {\"text\": f\"Relative Humidity Levels\", \"x\": 0.05, \"xanchor\": \"left\"},\n",
+        "            \"title\": {\"text\": f\"{parameter} Levels\", \"x\": 0.05, \"xanchor\": \"left\"},\n",
         "            \"xaxis\": {\"fixedrange\": True},\n",
         "            \"yaxis\": {\"fixedrange\": True},\n",
-        "            \"colorway\": [\"#155d21\"],\n",
+        "            \"colorway\": [\"#155d21\", \"#26a93c\"],  # Adjust colors as needed\n",
         "        },\n",
         "    }\n",
         "    return chart_figure\n",
         "\n",
         "\n",
-        "# Add a new dcc.Graph component for the Pie Chart\n",
-        "html.Div(\n",
-        "    children=[\n",
-        "        dcc.Graph(\n",
-        "            id=\"parameter-pie-chart\",\n",
-        "            config={\"displayModeBar\": False},\n",
-        "        ),\n",
-        "    ],\n",
-        "    className=\"card\",\n",
-        "),\n",
+        "# Define a callback to update the summary table based on the selected date range\n",
+        "@app.callback(\n",
+        "    Output(\"summary-table\", \"data\"),\n",
+        "    [Input(\"date-range\", \"start_date\"),\n",
+        "    Input(\"date-range\", \"end_date\")]\n",
+        ")\n",
+        "def update_summary_table(start_date, end_date):\n",
+        "    mask = (\n",
+        "        (train[\"DATETIMEDATA\"] >= start_date)\n",
+        "        & (train[\"DATETIMEDATA\"] <= end_date)\n",
+        "    )\n",
+        "    filtered_data = train.loc[mask, :]\n",
+        "    \n",
+        "    summary_data = []\n",
+        "    for param in train.columns[2:]:\n",
+        "        summary_data.append({\n",
+        "            \"Parameter\": param,\n",
+        "            \"Min\": filtered_data[param].min(),\n",
+        "            \"Max\": filtered_data[param].max(),\n",
+        "            \"Mean\": filtered_data[param].mean()\n",
+        "        })\n",
+        "    \n",
+        "    return summary_data\n",
+        "\n",
         "\n",
         "# Modify the callback to update the Pie Chart\n",
         "@app.callback(\n",
@@ -1329,28 +1398,28 @@
         "    if parameter not in available_parameters:\n",
         "        parameter = available_parameters[0]\n",
         "\n",
-        "    pm25_mean_value = filtered_data[\"Relative Humidity\"].mean()\n",
+        "    rh_mean_value = filtered_data[\"Relative Humidity\"].mean()\n",
         "    prediction_label_mean_value = filtered_data[\"prediction_label\"].mean()\n",
         "\n",
         "    # Calculate accuracy\n",
-        "    accuracy = (1 - abs(pm25_mean_value - prediction_label_mean_value) / pm25_mean_value) * 100\n",
+        "    accuracy = (1 - abs(rh_mean_value - prediction_label_mean_value) / rh_mean_value) * 100\n",
         "\n",
         "    # Create the Pie Chart\n",
         "    pie_chart_figure = {\n",
         "        \"data\": [\n",
         "            {\n",
         "                \"labels\": [\n",
-        "                    f\"Mean Value (Relative Humidity)\",\n",
-        "                    f\"Mean Value (Relative Humidity Prediction Label)\\nAccuracy: {accuracy:.2f}%\"\n",
+        "                    f\"Mean Value (PM 2.5)\",\n",
+        "                    f\"Mean Value (Prediction Label)\\nAccuracy: {accuracy:.2f}%\"\n",
         "                ],\n",
-        "                \"values\": [pm25_mean_value, prediction_label_mean_value],\n",
+        "                \"values\": [rh_mean_value, prediction_label_mean_value],\n",
         "                \"type\": \"pie\",\n",
         "                \"marker\": {\"colors\": [\"#155d21\", \"#9a070e\"]},\n",
         "                \"hole\": 0.4,\n",
         "            },\n",
         "        ],\n",
         "        \"layout\": {\n",
-        "            \"title\": {\"text\": f\"Mean Values Distribution for Relative Humidity\", \"x\": 0.05, \"xanchor\": \"left\"},\n",
+        "            \"title\": {\"text\": f\"Mean Values Distribution for PM 2.5\", \"x\": 0.05, \"xanchor\": \"left\"},\n",
         "            \"colorway\": [\"#155d21\", \"#9a070e\"],\n",
         "        },\n",
         "    }\n",
@@ -1358,9 +1427,10 @@
         "    return pie_chart_figure\n",
         "\n",
         "\n",
+        "\n",
         "# Define the third callback to update the PM2.5 predictions chart\n",
         "@app.callback(\n",
-        "    Output(\"Relative Humidity-predictions\", \"figure\"),\n",
+        "    Output(\"rh-predictions\", \"figure\"),\n",
         "    [\n",
         "        Input(\"parameter-filter\", \"value\"),\n",
         "        Input(\"date-range\", \"start_date\"),\n",
@@ -1368,7 +1438,7 @@
         "        Input(\"day-slider\", \"value\"),\n",
         "    ],\n",
         ")\n",
-        "def update_pm25_predictions(parameter, start_date, end_date, selected_days):\n",
+        "def update_rh_predictions(parameter, start_date, end_date, selected_days):\n",
         "    mask = (\n",
         "        (train[\"DATETIMEDATA\"] >= start_date)\n",
         "        & (train[\"DATETIMEDATA\"] <= end_date)\n",
@@ -1376,7 +1446,7 @@
         "    filtered_data = train.loc[mask, :]\n",
         "\n",
         "    # Assuming 'prediction_label' is the column containing PM2.5 predictions in your DataFrame\n",
-        "    pm25_predictions = train[\"prediction_label\"].tolist()\n",
+        "    rh_predictions = train[\"prediction_label\"].tolist()\n",
         "\n",
         "    # Create a DataFrame with hourly timestamps for the selected number of days\n",
         "    hours_in_a_day = 24\n",
@@ -1387,9 +1457,10 @@
         "    future_hourly_data = pd.DataFrame(\n",
         "        {\n",
         "            \"Timestamp\": future_hourly_timestamps,\n",
-        "            \"Predicted\": pm25_predictions[: len(future_hourly_timestamps)],\n",
+        "            \"Predicted\": rh_predictions[: len(future_hourly_timestamps)],\n",
         "        }\n",
         "    )\n",
+        "    \n",
         "\n",
         "    figure = {\n",
         "        \"data\": [\n",
@@ -1412,10 +1483,10 @@
         "\n",
         "# Run the app\n",
         "if __name__ == \"__main__\":\n",
-        "    app.run_server(debug=True, mode='inline', port=8051)\n",
+        "    app.run_server(debug=True, mode='inline')\n",
         "\n",
         "    # Open the app in a new browser window\n",
-        "    webbrowser.open_new_tab(\"http://127.0.0.1:8051/\")"
+        "    webbrowser.open_new_tab(\"http://127.0.0.1:8050/\")"
       ]
     }
   ],
